[package]
name = "msptest"
version = "0.14.0"
edition = "2021"
authors = ["Jonathan Hudson <jh+github@daria.co.uk>"]

[dependencies]
serialport = "4.2.0"
getopts = "0.2"
crossbeam = "0.8.2"
crossbeam-channel = "0.5"
crossterm = "0.25.0"
iota = "0.2.2"
sys-info = "0.9"
libc = "0.2.0"

[build-dependencies]
cc = "1.0"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"
features = [ "handleapi", "winnt", ]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
