[package]
name = "msptest"
version = "0.21.0"
edition = "2021"
authors = ["Jonathan Hudson <jh+github@daria.co.uk>"]

[dependencies]
serial2 = "0.1.7"
getopts = "0.2"
crossbeam = "0.8.2"
crossbeam-channel = "0.5"
crossterm = "0.25.0"
iota = "0.2.2"
sys-info = "0.9"
serialport = "4.2.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
